<resources>
    <string name="developers_name">Harshit Srivastava</string>
    <string name="app_name">MyExpenseManager1</string>

    <string name="one_time_earning">One time earning</string>
    <string name="monthly_earning">Monthly earning</string>
    <string name="source">source of income</string>
    <string name="repeatable">repeatable income</string>
    <string name="delete">Delete</string>
    <string name="avatar">avatarView</string>
    <string name="Rs">\u20B9</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_money_history">view money history</string>
    <string name="view_transaction_history">view transaction history</string>
    <string name="all_history">all history</string>
    <string name="Date">Date</string>
    <string name="time">time</string>
    <string name="cancel">Cancel</string>
    <string name="amount">amount</string>
    <string name="purpose">purpose</string>
    <string name="add_money_in_month">add money in month</string>
    <string name="add_money_in_year">add money in year</string>
    <string name="delete_existing_auto_adds">Delete Existing Auto Adds</string>
    <string name="add_money">Add Money</string>
    <string name="description">Description(Optional)</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="transaction_item_name">Transaction Item Name</string>
    <string name="snapshot">Snapshot</string>
    <string name="add">Add</string>
    <string name="item_cost">Amount Paid</string>
    <string name="item_name">Purpose</string>
    <string name="auto_add">Auto Add</string>
    <string name="manually_add">Manually Add</string>
    <string name="set_Transaction_remainder">set Remainder</string>
    <string name="view_History">View History</string>
    <string name="add_Transaction">Add Transaction</string>
    <string name="add_Money">Add Money</string>
    <string name="Export_Contact">Export Contact</string>
    <string name="Import_Contact">Import Contact</string>
    <string name="lending_manager">Lending Manager</string>
    <string name="live_data">LIVE STATS</string>
    <string name="head">head</string>
    <string name="money_yet_to_add">Money is yet to be added.</string>
    <string name="No_participants_yet">No_participants_yet.</string>
    <string name="transactions_yet_to_add">Transactions are yet to be added.</string>
    <string name="view_remainder_history">view all remainders</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="monthly_add">add this amount monthly?</string>
    <string name="transaction_head">Choose the type of transaction</string>
    <string name="set_transaction_type">set type of transaction</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="savingstab_data">You can save money buy telling us the amount u need to save and the min time time to save it in this tab and
        accordingly we will manipulate ur trends.</string>
    <string name="about_developer">I am a student. This is my first full android application which i have published on google playstore.
     I really love the application because it is the first application which changed my ideas into reality. There are more to come but this
    application will be the most close to me. I will keep on upgrading this app. Everyone please keep on giving feedback if there is any
    problem with the application. i will reply for sure and will upgrade the app as soon as possible .</string>
    <string name="word_from_developer">Thanks you all of you for your support. Just keep using the app to its fullest. I am really glad to
        help you all with my application.</string>
    <string name="saved_unique_id">uniqueId</string>
    <string name="add_participant">add participantItem</string>
    <string name="participants_name">participants name</string>
    <string name="in_debt">in debt</string>
    <string name="remainder_yet_to_add">remainder yet to add</string>
    <string name="_0_00">0.00</string>
    <string name="set_type">Set type</string>
    <string name="load_history">load history</string>
    <string name="history">History</string>
    <string name="no_lends_borrows_still">no lends/borrows still.</string>
    <string name="simple_lend_borrow">simple Lend/Borrow</string>
    <string name="set_your_first_lend_borrow">set your first lend/borrow</string>
    <string name="set_last_date_to_settle">set last date to settle?</string>
    <string name="due_amount">due amount</string>
    <string name="debt_type">debt type</string>
    <string name="one_time_earns">ONE TIME EARNS</string>
    <string name="monthly_earns">MONTHLY EARNS</string>
    <string name="ok">ok</string>
    <string name="done">done</string>
    <string name="settle">settle</string>
    <string name="total_lends">Total Lends :</string>
    <string name="total_borrows">Total Borrows :</string>

</resources>
