<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".Fragments.OptionsFrag">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="30dp"
        android:src="@drawable/logo_expense_manager_short"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_layout">
        <Button
            android:id="@+id/import_contact"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/mdtp_white"
            android:layout_height="match_parent"
            android:text="@string/Import_Contact"
            android:textSize="16sp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/export_contact"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/mdtp_white"
            android:layout_height="match_parent"
            android:text="@string/Export_Contact"
            android:textAllCaps="false"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/add_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff7022"
            android:background="@drawable/shape"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/add_money"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/add_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff7022"
            android:background="@drawable/shape"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/add_Transaction"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/view_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff7022"
            android:background="@drawable/shape"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/view_History"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/set_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff7022"
            android:background="@drawable/shape"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/set_Transaction_remainder"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/lending_Manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff7022"
            android:background="@drawable/shape"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/lending_manager"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/live_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mdtp_white"
            android:background="#ff7022"
            android:layout_weight="1"
            android:text="@string/live_data"
            android:textAllCaps="false"/>

    </LinearLayout>


</RelativeLayout>
