<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddEarningFrag">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Rs"
                android:textColor="#000"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/money_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:hint="@string/amount"
                android:inputType="number"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:orientation="horizontal"
            android:padding="5dp">
            <Button
                android:id="@+id/date_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/mdtp_white"
                android:text="@string/Date"
                android:textColor="@color/colorPrimary" />
            <Button
                android:id="@+id/time_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/mdtp_white"
                android:text="@string/time"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
        <EditText
            android:id="@+id/money_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_time_layout"
            android:gravity="center_vertical"
            android:hint="@string/source"
            android:maxLines="3"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/monthlyadd_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/money_description"
            android:layout_margin="16dp"
            android:checked="true"
            android:text="@string/monthly_add"
            android:textColor="@color/colorPrimaryDark"
            />

        <Button
            android:id="@+id/add_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/monthlyadd_checkbox"
            android:background="@drawable/button_background"
            android:text="@string/add_money"
            android:textColor="@android:color/white" />
    </RelativeLayout>
    </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>
