<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.users.myexpensemanager1.Fragments.AddMoneyAuto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/money_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:orientation="vertical">
        <EditText
            android:id="@+id/money_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:textColorHint="@color/mdtp_white"
            android:textColor="@color/mdtp_white"
            android:inputType="number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/money_amount"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <Button
                android:layout_margin="5dp"
                android:id="@+id/date_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:hint="@string/Date"
                android:textColorHint="@color/mdtp_white"
                android:textColor="@color/mdtp_white"/>
            <Button
                android:layout_margin="5dp"
                android:id="@+id/time_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:hint="@string/time"
                android:textColorHint="@color/mdtp_white"
                android:textColor="@color/mdtp_white"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_background"
        android:orientation="vertical">
        <Button
            android:id="@+id/add_money_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="#fff"
            android:text="@string/add_money_in_month"/>
        <Button
            android:id="@+id/add_money_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="#fff"
            android:text="@string/add_money_in_year"/>

        <Button
            android:id="@+id/delete_auto_adds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="#fff"
            android:text="@string/delete_existing_auto_adds"/>
    </LinearLayout>


</RelativeLayout>
