<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <EditText
                    android:id="@+id/participant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/participants_name"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/line0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/participant_name"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/set_your_first_lend_borrow"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line0"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Rs"
                        android:textColor="#000" />

                    <EditText
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="13"
                        android:hint="@string/_0_00"
                        android:inputType="number"
                        android:maxLines="1" />
                </LinearLayout>

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/type_chooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line1"
                    android:hint="@string/set_type"
                    android:textColorHint="#9F9F9F"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/type_chooser"
                    android:hint="@string/simple_lend_borrow"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/add_participant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/purpose"
                    android:background="@drawable/button_background"
                    android:text="@string/add_participant"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>
