<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".Fragments.AddMoneyManual">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="#ff7022"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:weightSum="1">
        <EditText
            android:id="@+id/money_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:textColorHint="@color/mdtp_white"
            android:textColor="@color/mdtp_white"
            android:inputType="number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                android:layout_margin="5dp"
                android:id="@+id/date_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:hint="@string/Date"
                android:textColorHint="@color/mdtp_white"
                android:textColor="@color/mdtp_white"/>
            <Button
                android:layout_margin="5dp"
                android:id="@+id/time_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:hint="@string/time"
                android:textColorHint="@color/mdtp_white"
                android:textColor="@color/mdtp_white"/>
        </LinearLayout>



        <EditText
            android:id="@+id/money_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/description"
            android:textColorHint="@color/mdtp_white"
            android:textColor="@color/mdtp_white"/>
    </LinearLayout>



        <Button
            android:id="@+id/add_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ff7022"
            android:text="@string/add_money"
            android:textColorHint="@color/mdtp_white"
            android:textColor="@color/mdtp_white"/>


</RelativeLayout>
