<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_marginTop="5dp"
    android:background="@color/mdtp_white"
    android:padding="5dp">

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/debtAmount"
        android:text="@string/debt_type"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/purpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/type"
        android:layout_toStartOf="@+id/debtAmount"
        android:text="@string/purpose" />

    <TextView
        android:id="@+id/debtAmount"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/due_amount"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="25sp" />
</RelativeLayout>