<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Fragments.SelectHistoryFrag">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/piggyback_background"/>

    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/view_money_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_money_history"
            android:textColor="@color/mdtp_white"
            android:background="@drawable/button_background"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/view_transaction_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_transaction_history"
            android:textColor="@color/mdtp_white"
            android:background="@drawable/button_background"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/view_Remainders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_remainder_history"
            android:textColor="@color/mdtp_white"
            android:background="@drawable/button_background"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/all_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_history"
            android:textColor="@color/mdtp_white"
            android:background="@drawable/button_background"/>
    </LinearLayout>
</RelativeLayout>
